--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,6 @@
     <string name="test_app_name">App name</string>
     <string name="testlyric">Lyrics test</string>
     <string name="app_no_permissions">Insufficient permissions</string>
-    <string name="app_get_permissions">If you can\'t get the list of installed apps, go to Settings to enable the Installed Apps list permission.</string>
-    <string name="app_go_setting">Go Setting</string>
+    <string name="app_get_permissions">If you can\'t get the list of installed apps, go to Settings to enable the installed apps list permission.</string>
+    <string name="app_go_setting">Go to Settings</string>
 </resources>
