opt：优化设置界面

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -86,8 +86,13 @@
     <string name="test_app_lyric">软件歌词</string>
     <string name="test_app_play">播放状态</string>
     <string name="test_app_name">软件包名称</string>
-    <string name="testlyric">歌词获取测试</string>
+    <string name="testlyric">歌词测试</string>
     <string name="app_no_permissions">权限不足</string>
     <string name="app_get_permissions">无法获取已安装应用列表，请前往设置开启已安装应用列表权限。</string>
     <string name="app_go_setting">去设置</string>
+    <string name="sendtestlyric">发送测试歌词</string>
+    <string name="cleantestlyric">清除测试歌词</string>
+    <string name="mifocus_tips">仅Hyperos 2.0可用，并解决白名单，使用的时候请打开通知</string>
+    <string name="mifocus">同时发送 Hyperos焦点通知</string>
+    <string name="testlyric_tips">提示：这里测试没问题可能是其他软件问题，要是发送测试歌词有问题请反馈，无问题就是其他原因，焦点通知是拿来测试您是否解除了白名单用。</string>
 </resources>
