--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,8 +91,8 @@
     <string name="app_get_permissions">If you can\'t get the list of installed apps, go to Settings to enable the installed apps list permission.</string>
     <string name="app_go_setting">Go to Settings</string>
     <string name="sendtestlyric">Send test lyrics</string>
-    <string name="cleantestlyric">Clear Test Lyrics</string>
-    <string name="mifocus_tips">Only Hyperos 2.0 is available and solves whitelisting, please turn on notifications when using it</string>
-    <string name="mifocus">Send Hyperos Focus notifications at the same time</string>
-    <string name="testlyric_tips">Tips: here test no problem may be other software problems, if you have problems sending test lyrics please feedback, no problem is other reasons, focus notification is used to test whether you lifted the whitelist with.</string>
+    <string name="cleantestlyric">Clear test lyrics</string>
+    <string name="mifocus_tips">Only HyperOS 2.0 is available and resolves whitelisting. Please turn on notifications when using it.</string>
+    <string name="mifocus">Send HyperOS focus notifications</string>
+    <string name="testlyric_tips">Warning: If the test here doesn\'t show any issues, it may be a problem with other software. If there are issues when sending the test lyrics, please provide your feedback. If there are no issues, the cause is something else. The focus notification is used to test if you\'ve disabled the whitelist.</string>
 </resources>
