--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -20,22 +20,22 @@
     <string name="getting_app_information">Obtendo informações do app</string>
     <string name="getting_app_information_tips">Por favor, aguarde…</string>
     <string name="api">Modo da API: %s</string>
-    <string name="more_api">Versão da API muito alta\nVersão atual %s, versão necessária %s</string>
-    <string name="low_api">Versão da API muito baixa\nVersão atual %s, versão necessária %s</string>
-    <string name="hook">Modo hook: %s</string>
+    <string name="more_api">Versão da API muito alta\nVersão atual %s | Versão necessária %s</string>
+    <string name="low_api">Versão da API muito baixa\nVersão atual %s | Versão necessária %s</string>
+    <string name="hook">Modo do hook: %s</string>
     <string name="no_support">Não compatível</string>
-    <string name="exclude">Versão excluída, não suportada.</string>
+    <string name="exclude">Versão excluída e sem suporte</string>
     <string name="un_know">Não incluído</string>
     <string name="app_rules_version_label">Versão da lista de suporte de apps</string>
     <string name="show_app_rules">Mostrar lista de suporte de todos os apps</string>
     <string name="update_app_rules">Atualizar lista de suporte</string>
     <string name="multi_rule">Detalhes %1$s: %2$s</string>
     <string name="uninstall_rule">Não instalado: Suporta %s modos no total</string>
-    <string name="app_rules_tips">Não incluído: Isso não significa que não possa ser usado, significa apenas que você não sabe a versão mínima suportada, portanto, não há regras de inclusão.\nAlguns softwares não estão incluídos. Fique à vontade para fornecer feedback e relatar erros.</string>
+    <string name="app_rules_tips">Não incluído: Isso não significa que não possa ser usado, significa apenas que você não sabe a versão mínima suportada, portanto, não há regras de inclusão.\nAlguns softwares não estão incluídos. Sinta-se à vontade para fornecer feedback e relatar qualquer erro.</string>
     <string name="output_repeated_lyrics">Saída de letras repetidas</string>
     <string name="enhanced_hidden_lyrics">Letras ocultas aprimoradas</string>
-    <string name="enhanced_hidden_lyrics_summary">Alguns softwares não são aplicáveis, isso fará com que as letras fiquem fantasmas.</string>
-    <string name="allow_some_software_to_output_after_the_screen">Permitir que algum software continue a exibir saída após a tela desligar</string>
+    <string name="enhanced_hidden_lyrics_summary">Alguns apps não são aplicáveis, o que pode resultar em letras distorcidas.</string>
+    <string name="allow_some_software_to_output_after_the_screen">Permitir que o app exiba saída após a tela desligar</string>
     <string name="regex_replace">Expressão regular para bloquear letras</string>
     <string name="device_label">Informações do dispositivo</string>
     <string name="new_rule_detected_loading">Nova lista de suporte de apps detectada. Carregando…</string>
@@ -56,7 +56,7 @@
     <string name="start_version_code">Código da versão inicial</string>
     <string name="end_version_code">Código da versão final</string>
     <string name="exclude_versions">Versões excluídas</string>
-    <string name="get_lyric_type">Obtenha o tipo de letra</string>
+    <string name="get_lyric_type">Obter tipo de letra</string>
     <string name="remarks">Observações</string>
     <string name="use_api">Usar API</string>
     <string name="no_have">Nenhum</string>
@@ -69,15 +69,15 @@
     <string name="rules_are_only_for_viewing_supported_versions">A Lista de suporte de apps serve apenas para ver versões de software suportadas.\nPode haver algumas discrepâncias com a aquisição real.\nO hook real busca as letras e não se refere aos dados nesta página.</string>
     <string name="notice">Aviso</string>
     <string name="salt_use_flyme">Salt/Sweet e Sour Music usa a interface Meizu</string>
-    <string name="salt_use_flyme_summary">Não é recomendado alternar quando o Modo da API estiver normal</string>
+    <string name="salt_use_flyme_summary">Não é recomendado alternar quando o Modo da API estiver ativo</string>
     <string name="multiple_modes_work">Existem vários modos que podem ser usados ​​normalmente</string>
     <string name="show_title">Forçar título de exibição</string>
-    <string name="version_differences">A versão de lançamento não gera logs, enquanto a versão Debug gera logs. Por isso, recomenda-se não instalar a versão Debug.</string>
-    <string name="fuck_wyy">Forçar abertura das letras na barra de status do NetEase Cloud</string>
-    <string name="fuck_wyy_tips">Ativar o interruptor pode causar anomalias no NetEase Cloud, que não se responsabiliza por este módulo.</string>
-    <string name="fuck_fuck_wyy">Desativar detecção do NetEase Cloud</string>
-    <string name="fuck_fuck_wyy_tips">Tente ignorar a detecção do NetEase Cloud Hook. Não nos responsabilizamos caso você seja bloqueado por esse módulo.</string>
-    <string name="fuck_wyy_about">Configurações de aquisição de letras do NetEase Cloud</string>
+    <string name="version_differences">A versão Release não gera logs, enquanto a versão Debug os gera. Por isso, recomenda-se evitar a instalação da versão Debug.</string>
+    <string name="fuck_wyy">Forçar letras na barra de status do NetEase Cloud Music</string>
+    <string name="fuck_wyy_tips">Ativar o interruptor pode causar anomalias no NetEase Cloud Music, e este módulo não se responsabiliza por isso.</string>
+    <string name="fuck_fuck_wyy">Desativar detecção do NetEase Cloud Music</string>
+    <string name="fuck_fuck_wyy_tips">Tentar contornar a detecção de hook do NetEase Cloud Music pode resultar em banimento. Não nos responsabilizamos caso você seja banido por esse módulo.</string>
+    <string name="fuck_wyy_about">Configurações de aquisição de letras do NetEase Cloud Music</string>
     <string name="lyric_setting">Configurações de aquisição de letras</string>
     <string name="test_app_delay">Tempo de atraso (ms)</string>
     <string name="test_app_useOwnMusicController">Controlador de música personalizado</string>
@@ -92,7 +92,7 @@
     <string name="app_go_setting">Vá para Configurações</string>
     <string name="send_test_lyric">Enviar letras de teste</string>
     <string name="clean_test_lyric">Limpar letras de teste</string>
-    <string name="mifocus_tips">Somente o HyperOS 2.0 está disponível e resolve a lista de permissões. Por favor, ative as notificações ao usar.</string>
+    <string name="mifocus_tips">Apenas o HyperOS 2.0 está disponível e resolve a lista de permissões. Por favor, ative as notificações ao usar.</string>
     <string name="mifocus">Enviar notificações de foco do HyperOS</string>
     <string name="test_lyric_tips">Aviso: Se o teste aqui não apresentar problemas, pode ser um problema com outro software. Se houver problemas ao enviar as letras de teste, por favor, envie seu feedback. Se não houver problemas, a causa é outra. A notificação de foco é usada para testar se você desativou a lista de permissões.</string>
 </resources>
