--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="build_time_label">Build time</string>
     <string name="unactivated_summary">Click here to restart the software</string>
     <string name="welcome">Welcome to use</string>
-    <string name="restart_the_scoped_software">Restart the software with the defined scope</string>
+    <string name="restart_the_scoped_software">Restart the software with defined scope</string>
     <string name="restart">Restart</string>
     <string name="api_version_label">API version</string>
     <string name="config_version_label">Configuration file version</string>
@@ -20,22 +20,22 @@
     <string name="getting_app_information">Getting app information</string>
     <string name="getting_app_information_tips">Please wait…</string>
     <string name="api">API mode: %s</string>
-    <string name="more_api">Too high API version\nCurrent version %s, required version %s</string>
-    <string name="low_api">Too low API version\nCurrent version %s, required version %s</string>
+    <string name="more_api">API version too high\nCurrent version %s | Required version %s</string>
+    <string name="low_api">API version too low\nCurrent version %s | Required version %s</string>
     <string name="hook">Hook mode: %s</string>
     <string name="no_support">Not supported</string>
-    <string name="exclude">Exclude version, not supported.</string>
+    <string name="exclude">Version removed and unsupported</string>
     <string name="un_know">Not included</string>
     <string name="app_rules_version_label">App support list version</string>
     <string name="show_app_rules">Show all app support list</string>
     <string name="update_app_rules">Update support list</string>
     <string name="multi_rule">Details %1$s: %2$s</string>
     <string name="uninstall_rule">Not installed: Supports %s modes in total</string>
-    <string name="app_rules_tips">Not included: It doesn\'t mean that it can\'t be used; it just means that you don\'t know the minimum supported version, so there are no inclusion rules.\nSome software isn\'t included. You\'re welcome to provide feedback and report errors.</string>
+    <string name="app_rules_tips">Not included: It doesn\'t mean that it can\'t be used; it just means that you don\'t know the minimum supported version, so there are no inclusion rules.\nSome software isn\'t included. Feel free to provide feedback and report any errors.</string>
     <string name="output_repeated_lyrics">Output repeated lyrics</string>
     <string name="enhanced_hidden_lyrics">Enhanced hidden lyrics</string>
-    <string name="enhanced_hidden_lyrics_summary">Some software isn\'t applicable, this will cause the lyrics to be ghosted.</string>
-    <string name="allow_some_software_to_output_after_the_screen">Allow some software to continue output after the screen is off</string>
+    <string name="enhanced_hidden_lyrics_summary">Some apps aren\'t applicable, which may result in distorted lyrics.</string>
+    <string name="allow_some_software_to_output_after_the_screen">Allow the app to display output after the screen is off</string>
     <string name="regex_replace">Regular expression to block lyrics</string>
     <string name="device_label">Device information</string>
     <string name="new_rule_detected_loading">New app support list detected. Loading…</string>
@@ -69,15 +69,15 @@
     <string name="rules_are_only_for_viewing_supported_versions">The App support list is only for viewing supported software versions.\nThere may be some discrepancies with the actual acquisition.\nThe actual hook fetches the lyrics and doesn\'t refer to the data on this page.</string>
     <string name="notice">Notice</string>
     <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu interface</string>
-    <string name="salt_use_flyme_summary">It isn\'t recommended to switch when the API mode is normal</string>
+    <string name="salt_use_flyme_summary">It isn\'t recommended to switch when the API mode is active</string>
     <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
     <string name="show_title">Force show title</string>
-    <string name="version_differences">The release version doesn\'t generate logs, while the Debug version generates logs. Therefore, it\'s recommended not to install the Debug version.</string>
-    <string name="fuck_wyy">Force opening of lyrics in NetEase Cloud status bar</string>
-    <string name="fuck_wyy_tips">Turning on the switch may cause abnormalities in NetEase Cloud, which isn\'t responsible for this module.</string>
-    <string name="fuck_fuck_wyy">Disable NetEase Cloud detection</string>
-    <string name="fuck_fuck_wyy_tips">Try to bypass NetEase Cloud Hook detection. We\'re not responsible if you\'re blocked because of this module.</string>
-    <string name="fuck_wyy_about">NetEase Cloud lyrics acquisition settings</string>
+    <string name="version_differences">The Release version doesn\'t generate logs, while the Debug version does. Therefore, it\'s recommended to avoid installing the Debug version.</string>
+    <string name="fuck_wyy">Force lyrics in status bar of NetEase Cloud Music</string>
+    <string name="fuck_wyy_tips">Turning on the switch may cause anomalies in NetEase Cloud Music, and this module isn\'t responsible for it.</string>
+    <string name="fuck_fuck_wyy">Disable NetEase Cloud Music detection</string>
+    <string name="fuck_fuck_wyy_tips">Try to bypass NetEase Cloud Music\'s hook detection may result in a ban. We\'re not responsible if you get banned due to this module.</string>
+    <string name="fuck_wyy_about">NetEase Cloud Music lyrics acquisition settings</string>
     <string name="lyric_setting">Lyrics acquisition settings</string>
     <string name="test_app_delay">Delay time (ms)</string>
     <string name="test_app_useOwnMusicController">Custom music controller</string>
